@@ -39,6 +39,7 @@ public class MasterMetrics implements Updater {
   private final Log LOG = LogFactory.getLog(this.getClass());
   private final MetricsRecord metricsRecord;
   private final MetricsRegistry registry = new MetricsRegistry();
+  private final MasterStatistics masterStatistics;
   /*
    * Count of requests to the cluster since last call to metrics update
    */
@@ -52,11 +53,16 @@ public class MasterMetrics implements Updater {
     metricsRecord.setTag("Master", name);
     context.registerUpdater(this);
     JvmMetrics.init("Master", name);
+
+    // expose the MBean for metrics
+    masterStatistics = new MasterStatistics(this.registry);
+
     LOG.info("Initialized");
   }
   
   public void shutdown() {
-    // nought to do.
+    if (masterStatistics != null)
+      masterStatistics.shutdown();
   }
     
   /**
